Update configuration and main logic for button interaction. Changed window title in config, added resource and input settings, and implemented button creation and click logging in main.c.

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,4 +1,18 @@
 [Display]
 ScreenWidth  = 800
 ScreenHeight = 600
-Title        = "Orx Test Window"
+Title        = "Orx Button Test"
+
+[Resource]
+Texture = button.png
+
+[Input]
+SetList = MainInput
+MainInput = MOUSE_LEFT
+
+[MainObject]
+Graphic   = ButtonGraphic
+Position  = (400, 300, 0)
+
+[ButtonGraphic]
+Texture = button.png
