--- a/data/config.ini
+++ b/data/config.ini
@@ -1,10 +1,23 @@
+[Log]
+Type      = file console
+FileName  = MyOrxTest.log
+Level     = debug
+
 [Display]
 ScreenWidth  = 800
 ScreenHeight = 600
 Title        = "Orx Button Test"
 
+[Camera]
+FrustumWidth  = 800
+FrustumHeight = 600
+FrustumNear   = -1
+FrustumFar    = 1
+Position      = (400, 300, -1)
+
 [Resource]
-Texture = button.png
+TexturePath = .
+Texture      = button.png
 
 [Input]
 SetList = MainInput
